--- a/src/index.css
+++ b/src/index.css
@@ -164,3 +164,16 @@ form > section > div:last-child > button:hover {
   margin-bottom: 1rem;
   display: inline-block;
 }
+
+/* || Icon Buttons */
+
+.edit-icon {
+  cursor: pointer;
+  font-size: 1.05rem;
+  margin-right: 1rem;
+}
+
+.delete-icon {
+  cursor: pointer;
+  font-size: 1rem;
+}
